# pr2_self_test

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  rosdep.yaml  stack.xml
base_life_test/: base_life_test.launch  initialize_in_corner_and_drive.launch  localize.launch  mainpage.dox  manifest.xml  map_4x8.yaml
base_life_test/scripts/: base_life_test.py  safe_shuffle_commands.py
camera_focus/: CMakeLists.txt  focus.cpp  focusvert.cpp  mainpage.dox  manifest.xml  wge100_camera_focus.launch
cb_characterization/: collect_cb_data.launch
cb_characterization/scripts/: cmd_node.py
dynamic_verification/: manifest.xml
dynamic_verification/scripts/: dynamic_verify_joint.py
dynamic_verification/tests/: run_test.py  wrist.launch  wrist_gazebo.launch
ectools/: CMakeLists.txt  mainpage.dox  manifest.xml
ectools/msg/: ecstats.msg
ectools/src/: ecstats.cpp
hot_box_test/: CMakeLists.txt  base_shuffle.py  base_swivvel.py  hot_box_swivvel.launch  hot_box_test.launch  manifest.xml
hot_box_test/unit_test/: check_launch_files.py
invent_client/: mainpage.dox  manifest.xml
joint_qualification_controllers/: CHANGELOG.rst  CMakeLists.txt  controller_plugins.xml  manifest.xml  package.xml
joint_qualification_controllers/include/joint_qualification_controllers/: checkout_controller.h  counterbalance_test_controller.h  head_position_controller.h  hysteresis_controller.h  hysteresis_controller2.h  joint_limit_calibration_controller.h  motor_joint_calibration_controller.h  wrist_difference_controller.h
joint_qualification_controllers/msg/: ActuatorData.msg  CBPositionData.msg  CBRunData.msg  CounterbalanceTestData.msg  HysteresisData.msg  HysteresisData2.msg  HysteresisRun.msg  JointData.msg  JointPositionData.msg  RobotData.msg  WristDiffData.msg  WristRollTurn.msg
joint_qualification_controllers/src/: checkout_controller.cpp  counterbalance_test_controller.cpp  head_position_controller.cpp  hysteresis_controller.cpp  hysteresis_controller2.cpp  joint_limit_calibration_controller.cpp  motor_joint_calibration_controller.cpp  wrist_difference_controller.cpp
life_test/: CMakeLists.txt  manifest.xml  pr2_etherCAT.launch  pr2_test_manager.py  test_manager.py  tests.xml  wg_test_rooms.xml  wge100.launch
life_test/arm_life_test/: arm_defs.xml  arm_life_test.launch  controller_cartesian_pose_right.launch  controller_cartesian_pose_right_forearm.launch  full_arm.launch  (+18 more)
motorconf_gui/: manifest.xml
pr2_bringup_tests/: CHANGELOG.rst  CMakeLists.txt  imu_data_plot.sh  life_test.rosinstall  mainpage.dox  manifest.xml  package.xml
pr2_bringup_tests/calibration_bringup/: calibration_bringup.rosinstall  pr2_calibration_check.vcg  pr2_calibration_verify.launch
pr2_bringup_tests/calibration_bringup/postburn/: free_cb_poses.yaml  only_cb_pose_params.launch  postburn_estimate_pr2_beta.launch  postburn_estimate_pr2_beta.sh  postburn_view_forearm_scatter.sh  postburn_view_head_arm_scatter.sh  postburn_view_head_laser_scatter.sh
pr2_bringup_tests/calibration_bringup/preburn/: preburn_estimate_pr2_beta.launch  preburn_estimate_pr2_beta.sh  preburn_view_forearm_scatter.sh  preburn_view_head_arm_scatter.sh  preburn_view_head_laser_scatter.sh
pr2_bringup_tests/launch/: forearm_cam_trig.launch  gripper_led_on.launch  l_gripper_led_on.launch  prosilica_poll.launch  prosilica_stream.launch  r_gripper_led_on.launch
pr2_bringup_tests/scripts/: gripper_accel.sh
pr2_component_descriptions/: CMakeLists.txt  mainpage.dox  manifest.xml
pr2_computer_monitor/: CMakeLists.txt  cpu_monitor.launch  hd_monitor.launch  mainpage.dox  manifest.xml
pr2_counterbalance_check/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
pr2_counterbalance_check/config/: counterbalance_controller.yaml
pr2_counterbalance_check/launch/: cb_test_common.launch  counterbalance_test_left.launch  counterbalance_test_right.launch
pr2_counterbalance_check/scripts/: cb_check.py  cb_qual_test.py
pr2_counterbalance_check/src/pr2_counterbalance_check/: counterbalance_analysis.py
pr2_counterbalance_check/test/: cb_analysis_test.py  cb_test.test
pr2_counterbalance_check/training/: counterbalance_training.py
pr2_counterbalance_check/util/: full_arm_holder.py
pr2_drive_life_test/: life_test_map.pgm  localize.launch  manifest.xml  map.yaml  map_4x8.pgm  pr2_drive_life_test.launch
pr2_etherCAT/: CMakeLists.txt  manifest.xml
pr2_hardware_test_monitor/: CMakeLists.txt  mainpage.dox  manifest.xml
pr2_laser_snapshotter/: CMakeLists.txt  mainpage.dox  manifest.xml
pr2_motor_diagnostic_tool/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml  plugin.xml
pr2_motor_diagnostic_tool/msg/: MotorSample.msg
pr2_motor_diagnostic_tool/src/: analysis_test.py  diagnostic_tool_widget.py  get_diagnostic_data.py  my_module.py  pr2_diagnostic_widget.ui
pr2_motor_diagnostic_tool/srv/: DiagnosticData.srv
pr2_msgs/: manifest.xml
pr2_self_test/: CHANGELOG.rst  CMakeLists.txt  package.xml
pr2_self_test_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pr2_srvs/: manifest.xml
qualification/: CMakeLists.txt  Makefile  ROS_BUILD_BLACKLIST  display.py  mainpage.dox  manifest.xml  pr2_qual.py  qualify.py  wg_map.xml
roslaunch_caller/: manifest.xml
roslaunch_parse_tester/: CMakeLists.txt  mainpage.dox  manifest.xml
test_pr2_self_test/: CMakeLists.txt  mainpage.dox  manifest.xml
test_pr2_self_test/scripts/: check_pr2_self_test.py
test_pr2_self_test/src/: selftest_demo.cpp
test_pr2_self_test/src/test_pr2_self_test/: qual_test_result.py
test_pr2_self_test/test/: test_self_test_caller.launch
test_pr2_self_test/test/test_invent/: invent_submit.py
test_pr2_self_test/test/test_results/: all_pass_no_prestarts.py  all_tests_pass.py  prestart_error.py  prestart_failure.py  shutdown_failure.py  subtest_failure.py  subtest_retry.py  test_canceled.py  tests_operator_pass.py
test_pr2_self_test_gazebo/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
tune_joints/: launch_controllers.launch  plot_step.py
wg_hardware_roslaunch/: manifest.xml
(+939 files in other folders)
