<package>
  <name>joint_qualification_controllers</name>
  <version>1.0.14</version>
  <description>Controllers used in PR2 hardware testing. For testing counterbalance of PR2, and for internal WG use.</description>
  <maintainer email="dave@cse.unr.edu">David Feil-Seifer</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/joint_qualification_controllers</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Kevin Watts</author>
  <author>Melonee Wise</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>pr2_hardware_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robot_mechanism_controllers</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>urdf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>pr2_hardware_interface</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>robot_mechanism_controllers</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>urdf</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2_controller_interface</test_depend> -->
  <!-- <test_depend>pr2_mechanism_model</test_depend> -->
  <!-- <test_depend>pr2_hardware_interface</test_depend> -->
  <!-- <test_depend>control_toolbox</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>robot_mechanism_controllers</test_depend> -->
  <!-- <test_depend>pluginlib</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>realtime_tools</test_depend> -->
  <!-- <test_depend>urdf</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ljoint_qualification_controllers" cflags="-I${prefix}/include"/>
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml"/>
</export>

</package>
