<package>
  <name>pr2_self_test_msgs</name>
  <version>1.0.0</version>
  <description>Messages used in PR2 hardware testing.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_self_test_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Kevin Watts</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>
